# pagoda-telemetry-orchestrator

./: .env  .gitignore  README.md  docker-compose-full.yml  docker-compose-nifi-central.yml  docker-compose-nifi-mec1.yml  docker-compose-nifi-mec2.yml  docker-compose-pagoda.yml  docker-compose.yml
docker/alertmanager/: config.yml
docker/app-manager/: Dockerfile  pyproject.toml
docker/app-manager/app_manager/: loader.py  main.py  nificlient.py
docker/app-manager/app_manager/catalog/nifi/templates/: MetricSource.xml  MetricSourceYANG.xml
docker/ndac-http-dummy-server/: Dockerfile
docker/nifi/: Dockerfile
docker/nifi-central/: Dockerfile  monitor-central.pagoda.local.crt  monitor-central.pagoda.local.key
docker/nifi-mec1/: Dockerfile  monitor-mec1.pagoda.local.crt  monitor-mec1.pagoda.local.key
docker/nifi-mec2/: Dockerfile  monitor-mec2.pagoda.local.crt  monitor-mec2.pagoda.local.key
docker/process-manager/: Dockerfile  docker-entrypoint.sh  pyproject.toml
docker/pushgateway-tester/: Dockerfile
docker/telemetry-orchestrator/: Dockerfile  docker-entrypoint.sh  pyproject.toml
docker/telemetry-orchestrator/telemetry_orchestrator/: main.py
docker/telemetry-orchestrator/telemetry_orchestrator/server/: app.py  applications.py  database.py  nificlient.py  orchestration.py
docker/telemetry-orchestrator/telemetry_orchestrator/server/models/: metric.py  ue_location.py
docker/telemetry-orchestrator/telemetry_orchestrator/server/routes/: metric.py  ue_location.py
docker/telemetry-orchestrator/tests/: test_telemetry_orchestrator.py
(+73 files in other folders)
