[tool.poetry]
name = "telemetry-orchestrator"
version = "0.1.0"
description = "Pagoda Telemetry Orchestrator"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "^5.4.1"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
motor = "^3.0.0"
pydantic = "^1.8.2"
nipyapi = "^0.19.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
